@@ -4,9 +4,9 @@ import cn.zorcc.common.enums.ExceptionType;
 import cn.zorcc.common.exception.FrameworkException;
 import cn.zorcc.common.util.NativeUtil;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 import java.util.concurrent.TimeUnit;
 
@@ -25,16 +25,18 @@ public record Timeout(
     private static final long secOffset = timespecLayout.byteOffset(MemoryLayout.PathElement.groupElement("tv_sec"));
     private static final long nsecOffset = timespecLayout.byteOffset(MemoryLayout.PathElement.groupElement("tv_nsec"));
 
-    public static Timeout of(int milliseconds) {
-        if(NativeUtil.isWindows() || NativeUtil.isLinux()) {
-            return new Timeout(milliseconds, null);
-        }else if(NativeUtil.isMacos()) {
-            MemorySegment ptr = MemorySegment.allocateNative(timespecLayout, SegmentScope.global());
-            NativeUtil.setLong(ptr, secOffset, milliseconds / 1000);
-            NativeUtil.setLong(ptr, nsecOffset, TimeUnit.MILLISECONDS.toNanos(milliseconds % 1000));
-            return new Timeout(Integer.MIN_VALUE, ptr);
-        }else {
-            throw new FrameworkException(ExceptionType.NETWORK, "Unrecognized operating system");
+    public static Timeout of(Arena arena, int milliseconds) {
+        switch (NativeUtil.ostype()) {
+            case Windows, Linux -> {
+                return new Timeout(milliseconds, null);
+            }
+            case MacOS -> {
+                MemorySegment ptr = arena.allocate(timespecLayout);
+                NativeUtil.setLong(ptr, secOffset, milliseconds / 1000);
+                NativeUtil.setLong(ptr, nsecOffset, TimeUnit.MILLISECONDS.toNanos(milliseconds % 1000));
+                return new Timeout(Integer.MIN_VALUE, ptr);
+            }
+            default -> throw new FrameworkException(ExceptionType.NETWORK, "Unrecognized operating system");
         }
     }
 }
